--- a/custompage_SDEdashboard/externalservice.properties
+++ b/custompage_SDEdashboard/externalservice.properties
@@ -1,4 +1,4 @@
 #
-#Thu Nov 26 14:10:50 CST 2015
+#Fri Dec 04 14:30:49 CST 2015
 updatesdeurl=http\://phxuxsoadev01\:8040/services/sde/create_sde?UWI\={{UWI}}
-debug=false
+debug=true
