--- a/custompage_SDEdashboard/externalservice.properties
+++ b/custompage_SDEdashboard/externalservice.properties
@@ -1,4 +1,5 @@
 #
-#Fri Dec 04 14:30:49 CST 2015
+#Wed Dec 16 14:50:26 CST 2015
 updatesdeurl=http\://phxuxsoadev01\:8040/services/sde/create_sde?UWI\={{UWI}}
 debug=true
+version=0.0.7
