--- a/santos SDE/.project
+++ b/santos SDE/.project
@@ -20,4 +20,21 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>custompage/Index.groovy</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/atelier/BPM-SP-7.1.0/workspace/tomcat/bonita/client/tenants/1/work/pages/custompage_gcdmdashboard/Index.groovy</locationURI>
+		</link>
+		<link>
+			<name>custompage/gcdmmonitor.js</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/atelier/BPM-SP-7.1.0/workspace/tomcat/bonita/client/tenants/1/work/pages/custompage_gcdmdashboard/resources/gcdmmonitor.js</locationURI>
+		</link>
+		<link>
+			<name>custompage/index.html</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/atelier/BPM-SP-7.1.0/workspace/tomcat/bonita/client/tenants/1/work/pages/custompage_gcdmdashboard/index.html</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
