Modif made by Hakan

--- a/custompage_SDEdashboard/page.properties
+++ b/custompage_SDEdashboard/page.properties
@@ -1,5 +1,5 @@
 #The name must start with 'custompage_'
-#Thu Nov 12 16:38:27 PST 2015
+#Wed Dec 16 07:26:38 CST 2015
 displayName=SDE Dashboard
 name=custompage_SDEdashboard
 description=SDE Dashboard
