--- a/custompage_SDEdashboard/externalservice.properties
+++ b/custompage_SDEdashboard/externalservice.properties
@@ -1,5 +1,5 @@
 #
 #Wed Dec 16 14:50:26 CST 2015
-updatesdeurl=http\://phxuxsoadev01\:8040/services/sde/create_sde?UWI\={{UWI}}
-debug=true
-version=1.97
+updatesdeurl=http\://phxuxsoaesb01t\:8040/services/sde/create_sde?UWI\={{UWI}}
+debug=false
+version=1.98
