--- a/custompage_SDEdashboard/page.properties
+++ b/custompage_SDEdashboard/page.properties
@@ -1,5 +1,5 @@
 #The name must start with 'custompage_'
-#Wed Dec 16 07:26:38 CST 2015
+#Wed Jan 20 15:21:52 CET 2016
 displayName=SDE Dashboard
 name=custompage_SDEdashboard
 description=SDE Dashboard
