--- a/custompage_gcdmdashboard/page.properties
+++ b/custompage_gcdmdashboard/page.properties
@@ -1,5 +1,5 @@
 #The name must start with 'custompage_'
-#Tue Dec 01 13:46:16 PST 2015
+#Wed Jan 20 16:41:46 CET 2016
 displayName=GCDM Dashboard
 name=custompage_gcdmdashboard
 description=GCDM Dashboard
