--- a/custompage_SDEdashboard/page.properties
+++ b/custompage_SDEdashboard/page.properties
@@ -1,5 +1,5 @@
 #The name must start with 'custompage_'
-#Wed Jan 20 09:54:21 CST 2016
+#Thu Nov 12 16:38:27 PST 2015
 displayName=SDE Dashboard
 name=custompage_SDEdashboard
 description=SDE Dashboard
